--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fetcch",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.mjs",
   "engines": {
     "node": "20.x"
   },
