--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,12 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "index.mjs",
-        "use": "@vercel/node"
-      }
+      { "src": "index.mjs", "use": "@vercel/node" },
+      { "src": "public/**", "use": "@vercel/static" }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.mjs"
-      }
+      { "src": "/src/(.*)", "dest": "/src/$1" },
+      { "src": "/img/(.*)", "dest": "/public/img/$1" },
+      { "src": "/(.*)", "dest": "/index.mjs" }
     ]
   }
-  
