--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "index.mjs", "use": "@vercel/node" },
-      { "src": "public/**", "use": "@vercel/static" }
-    ],
-    "routes": [
-      { "src": "/src/(.*)", "dest": "/src/$1" },
-      { "src": "/img/(.*)", "dest": "/public/img/$1" },
-      { "src": "/(.*)", "dest": "/index.mjs" }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    { "src": "index.mjs", "use": "@vercel/node" },
+    { "src": "public/**", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/js/(.*)", "dest": "/public/js/$1" },
+    { "src": "/download", "dest": "/index.mjs" },
+    { "src": "/(.*)", "dest": "/index.mjs" }
+  ]
+}
